# coco

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  coco.pc.in
.agents/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
.omc/: prd.json
build_ts/: CMakeCache.txt  CTestTestfile.cmake  Makefile  basic  bench_channel  bench_io  bench_io_backend  bench_switch  cmake_install.cmake  echo_server  memory_test  pipeline  test_aging  test_aging_trigger  test_batch_io  test_cancel  test_channel  test_channel_mt  test_coco_go  test_context_api  test_context_coro  test_context_value  test_coro  test_event_loop  test_exit  test_fd_table  test_global_sched  test_io  test_io_backend  test_io_options  test_iouring  test_lifecycle  test_locked_queue  test_netpoller_mt  test_platform_abstraction  test_poll_macos  test_priority  test_runq  test_safepoint  test_sched  (+10 more)
docs/: AGENTS.md  ASM_STYLE_GUIDE.md  MIGRATION.md  OPTIMIZATION_PLAN.md  PERF_OPTIMIZATION_PLAN.md  architecture.md  bugfix_plan.md
docs/superpowers/specs/: 2026-06-03-shared-stack-design.md
examples/: AGENTS.md  basic.c  cancel.c  context_api.c  dynamic_stack.c  echo_server.c  fan_out.c  hot_stack.c  http_static.c  http_static_mt.c  join_exit.c  memory_test.c  multithread.c  pipeline.c  preemption.c  priority.c  sched_run_once.c  select.c  timer.c
include/: AGENTS.md  coco.h  coco_abi.h  coco_frame_walker.h  coco_safety.h  coco_stack_grow.h  coco_stack_map.h
src/: AGENTS.md  coco_internal.h
src/channel/: AGENTS.md  channel.c  channel_common.h  channel_mt.c  channel_mt.h
src/core/: AGENTS.md  cancel.c  cls.c  cls.h  context.c  context_api.c  context_api.h  context_coro.c  context_coro.h  coro.c  coro_go.c  coro_go.h  debug.c  debug.h  frame_walker.c  hot_stack.c  hot_stack.h  preempt.c  safety.c  sched.c  signal.c  stack.c  stack_common.c  stack_common.h  stack_grow.c  stack_map.c  stack_pool.c  stack_pool.h  stack_pool_legacy.c  stack_pool_legacy.h  stack_pool_mt.c  stack_pool_mt.h  stack_pool_multi.c  stack_pool_multi.h  trace.c  trace.h  version.c
src/io/: AGENTS.md  batch_io_fallback.c  event_loop.c  fd_table.c  io_internal.h  netpoller_mt.c  netpoller_mt.h  poll_iouring.c  poll_linux.c  poll_macos.c  poll_windows.c
src/platform/: AGENTS.md  abi_detect.c  coco_cond.c  coco_cond.h  coco_mutex.c  coco_mutex.h  coco_thread.c  coco_thread.h  time.c
src/platform/linux/: AGENTS.md  ctx_arm64.S  ctx_x86_64.S  preempt.c
src/platform/macos/: AGENTS.md  ctx_arm64.S  ctx_x86_64.S  preempt.c
src/platform/windows/: AGENTS.md  ctx_arm64.S  ctx_x86_64.S  preempt.c
src/sched/: AGENTS.md  global_sched.c  global_sched.h  locked_queue.c  locked_queue.h  runq.c  runq.h  safepoint.c  safepoint.h  sched.c  sched.h  sched_hooks.c  sched_hooks.h  sched_stats.c  sched_stats.h
src/timer/: AGENTS.md  timer_wheel.c
tests/: AGENTS.md  benchmark_ctx_switch.c  run_all_tests.sh  verify_stack_offset.c  verify_stack_offset_test
tests/benchmark/: AGENTS.md  bench_channel.c  bench_hot_cold_switch.c  bench_hot_stack.c  bench_io.c  bench_io_4k.c  bench_io_backend.c  bench_mt_sched.c  bench_preempt.c  bench_stack.c  bench_switch.c
tests/integration/: AGENTS.md  test_stack_growth.c
tests/unit/: AGENTS.md  stress_channel_burst.c  stress_channel_mt_burst.c  stress_coro_count.c  stress_io_thunder.c  stress_mt_scaling.c  stress_timer_wheel.c  test_aging.c  test_aging_trigger.c  test_all.c  test_batch_io.c  test_cancel.c  test_channel.c  test_channel_mt.c  test_channel_select.c  test_cls.c  test_coco_go.c  test_context_api.c  test_context_coro.c  test_context_value.c  test_coro.c  test_coro_guard.c  test_ctx_x86_64.c  test_debug.c  test_event_loop.c  test_exit.c  test_fairness.c  test_fd_table.c  test_frame_walker.c  test_global_sched.c  test_global_sched_mt.c  test_hot_stack.c  test_io.c  test_io_backend.c  test_io_options.c  test_iouring.c  test_lifecycle.c  test_locked_queue.c  test_long_running.c  test_netpoller_mt.c  (+29 more)
tests/unit/ctx/: AGENTS.md  regs_x86_64.S  test_ctx_arm64.c  test_ctx_common.h
tools/: AGENTS.md  bench_regress.py
tools/coco_stack_pass/: AGENTS.md  CMakeLists.txt  CocoStackPass.cpp  post_process.py  test_integration.sh  test_stack_map.c  verify_format.c
